fix bug 110115 fix the toolbar garbage problem after we change font prf. r=nhotta sr=sfraser