gfx/src/mac/nsUnicodeMappingUtil.h
@@ -86,7 +86,6 @@ public:
 			else
 				return mGenericFontMapping[aScript][aType]; 
 	}
-    inline nsUnicodeFontMappingCache* GetFontMappingCache() { return mCache; };
 	
   ScriptCode MapLangGroupToScriptCode(const char* aLangGroup);
 	static nsUnicodeMappingUtil* GetSingleton();
@@ -107,7 +106,6 @@ private:
 	PRUint32 mScriptEnabled;
 	short 	 mScriptFontMapping[smPseudoTotalScripts];
 	PRInt8   mBlockToScriptMapping[kUnicodeBlockSize];
-	nsUnicodeFontMappingCache*	mCache;
 	nsCOMPtr<nsIPref> mPref;
 	
 	static nsUnicodeMappingUtil* gSingleton;
